[build-system]
requires = ["setuptools", "cython"]

[project]
name = "dublib"
version = "0.19.0"
description = "Коллекция полезных модулей от DUB1401."
authors = [
	{name = "DUB1401", email = "vlad.milosta@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"curl_cffi>=0.7.0",
	"dateparser",
	"fake_useragent>=2.0.3",
	"httpx",
	"httpx[http2]",
	"prettytable",
	"requests",
	"gnureadline; sys_platform == \"linux\"",
	"pyreadline3; sys_platform == \"win32\""
]
classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: The Unlicense (Unlicense)",
	"Natural Language :: Russian",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
telebot = [
    "pyTelegramBotAPI"
]

[project.urls]
Documentation = "https://github.com/DUB1401/dublib/tree/main/docs"
"Source Code" = "https://github.com/DUB1401/dublib"
"Bug Tracker" = "https://github.com/DUB1401/dublib/issues"
Changelog = "https://github.com/DUB1401/dublib/releases"
