[build-system]
requires = ["setuptools"]

[project]
name = "dublib"
version = "0.23.2"
description = "Коллекция полезных модулей от DUB1401."
authors = [
	{name = "DUB1401", email = "vlad.milosta@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"curl_cffi>=0.11.0",
	"dateparser",
	"fake-useragent>=2.0.3",
	"httpx",
	"httpx[http2]",
	"orjson",
	"prettytable",
	"requests",
	"pyyaml",
	"pydantic",
	"gnureadline; sys_platform == \"linux\"",
	"pyreadline3; sys_platform == \"win32\""
]
classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: The Unlicense (Unlicense)",
	"Natural Language :: Russian",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
telebot = [
	"pyTelegramBotAPI"
]
all = [
	"pyTelegramBotAPI",
	"pytest",
	"Sphinx",
	"sphinx-rtd-theme",
	"tomli; python_version == \"3.10\""
]

[project.urls]
Documentation = "https://github.com/DUB1401/dublib/tree/main/docs"
"Source Code" = "https://github.com/DUB1401/dublib"
"Bug Tracker" = "https://github.com/DUB1401/dublib/issues"
Changelog = "https://github.com/DUB1401/dublib/releases"
